# ansible-collection-potos.roles

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .taskrc.yml  .yamllint  AGENTS.md  CHANGELOG.rst  CONTRIBUTING  MAINTAINERS  README.md  Taskfile.yml  devfile.yaml  galaxy.yml  pyproject.toml  renovate.json  test-requirements.txt  tox-ansible.ini
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 10-wallpaper-role.yml
docs/docsite/: links.yml
extensions/molecule/wallpaper/: converge.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
roles/wallpaper/: README.md
roles/wallpaper/defaults/: main.yml
roles/wallpaper/handlers/: main.yml
roles/wallpaper/meta/: argument_specs.yml  main.yml
roles/wallpaper/tasks/: main.yml
roles/wallpaper/templates/usr/share/glib-2.0/schemas/: zz-potos-background.gschema.override
roles/wallpaper/templates/usr/share/gnome-background-properties/: potos.xml
roles/wallpaper/vars/: Fedora.yml
tests/: requirements.yml
tests/unit/: test_basic.py
