[project]
name = "projectpotos-roles-dev"
version = "0.0.0"
description = "Development and test environment for the projectpotos.roles Ansible collection."
requires-python = ">=3.12"

[dependency-groups]
# Local development and test tooling, managed with uv (`uv sync`).
# Runtime collection dependencies live in galaxy.yml / requirements.txt.
# The test group is exported to test-requirements.txt for CI by the
# uv-export pre-commit hook. ansible-core is excluded from the export because
# CI installs its own ansible-core per matrix entry.
test = [
    "pytest",
    "pytest-ansible",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    { include-group = "test" },
    "ansible>=14.1.0",
    "ansible-lint~=26.4.0",
    "yamllint~=1.38.0",
    "molecule>=26.4,<26.7",
    "molecule-plugins~=25.8.12",
    "docker~=7.1.0",
    "ruff>=0.15.20",
    "pre-commit>=4.6.0",
    "antsibull-changelog~=0.35.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ansible modules must place imports below DOCUMENTATION/EXAMPLES/RETURN
"plugins/modules/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["ansible_collections.projectpotos.roles"]
lines-after-imports = 2

[tool.pytest.ini_options]
addopts = ["-vvv", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ["ignore:AnsibleCollectionFinder has already been configured"]
testpaths = ["tests"]
