[project]
name = "projectpotos-roles-dev"
version = "0.0.0"
description = "Development and test environment for the projectpotos.roles Ansible collection."
requires-python = ">=3.12"

[dependency-groups]
# Local development and test tooling, managed with uv (`uv sync`).
# Runtime collection dependencies live in galaxy.yml / requirements.txt.
# The test group is exported to test-requirements.txt for CI by the
# uv-export pre-commit hook. ansible-core is excluded from the export because
# CI installs its own ansible-core per matrix entry.
test = [
    "pytest==9.1.1",
    "pytest-ansible==26.6.0",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
]
dev = [
    { include-group = "test" },
    "ansible==14.2.0",
    "ansible-lint==26.6.0",
    "yamllint==1.38.0",
    "molecule==26.6.0",
    "molecule-plugins==26.7.8",
    "docker==7.2.0",
    "ruff==0.15.21",
    "pre-commit==4.6.0",
    "antsibull-changelog==0.35.1",
    "shellcheck-jinja",
]

[tool.uv]
package = false

[tool.uv.sources]
shellcheck-jinja = { git = "https://github.com/projectpotos/shellcheck-jinja", tag = "v0.2.1" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ansible modules must place imports below DOCUMENTATION/EXAMPLES/RETURN
"plugins/modules/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["ansible_collections.projectpotos.roles"]
lines-after-imports = 2

[tool.pytest.ini_options]
addopts = ["-vvv", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ["ignore:AnsibleCollectionFinder has already been configured"]
testpaths = ["tests"]
